--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,13 @@
-
+<%= form_for @post do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :content %>
+  <%= f.text_field :content %>
+  <%= f.label "Select a Category" %>
+  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name, prompt: true %>
+  <%= f.label "Create a New Category" %>
+  <%= f.fields_for :categories do |c|  %>
+    <%= c.text_field :name %>
+  <% end %>
+  <%= f.submit %>
+<% end %>
