--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,50 @@
+<p>
+Post Title:
+<%= @post.title %>
+Post Content:
+<%= @post.content %>
+</p>
 
+<p>
+Category:
+<% @post.categories.uniq.each do |category| %>
+  <%= category.name %>
+<% end %>
+</p>
+
+<p>
+Comments:
+<% @post.comments.each do |comment| %>
+  <%= comment.content %>
+<% end %>
+</p>
+
+<p>
+
+Commented Users:
+<% @post.users.uniq.each do |user| %>
+  <%= link_to user.username, user_path(user) %>
+<% end %>
+
+</p>
+
+<% @post.comments.each do |comment| %>
+  <%= "#{comment.user.username} says: #{comment.content}!" %>
+<% end %>
+
+<%= form_for @comment do |f| %>
+  Comments:
+  <%= f.text_field :content %><br>
+  Select a Post:
+  <%= f.collection_select :post_id, Post.all, :id, :title %><br>
+  Select a User:
+  <%= f.collection_select :user_id, User.all, :id, :username %><br>
+  Or Create a User:
+  <%= f.fields_for :user do |u| %>
+    <%= u.label :username %>
+    <%= u.text_field :username %>
+    <%= u.label :email %>
+    <%= u.text_field :email %>
+  <% end %>
+  <%= f.submit %>
+<% end %>
