--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,47 @@
+<h1>Post Details</h1>
+<h2><%= @post.title %></h2><br>
+<p><%= @post.content %></p><br>
 
+   <% @post.comments.each do |comment| %>
+<p><%= comment.content %></p><br>
+<% end %>
+
+   <% @post.users.uniq.each do |user| %>
+<p><%= link_to user.username, user_path(user) %></p>
+<% end %>
+
+<% @post.categories.uniq.each do |category| %>
+<p><%= link_to category.name, category_path(category) %></p>
+<% end %>
+
+
+<!-- comments section -->
+
+<h2><% @post.comments.each do |comment| %></h2>
+<p><%="#{comment.user.username} says: #{comment.content}"%></p>
+<% end %>
+
+
+<h2>Comments</h2>
+<%= form_for @comment do |f| %>
+  <%= f.label :content%>
+  <%= f.text_area :content %>
+
+  <%= f.label "For Post"%>
+  <%= f.collection_select :post_id, Post.all, :id, :title %>
+
+  <%= f.label "By User"%>
+  <%= f.collection_select :user_id, User.all, :id, :username %>
+
+  <%= f.label "Or New User"%>
+  <%= f.fields_for :user do |u| %>
+  <%= u.label :username %>
+  <%= u.text_field :username %>
+
+  <%= u.label :email %>
+  <%= u.text_field :email %>
+  <% end %>
+
+  <%= f.submit %>
+
+<% end %>
