--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,26 @@
+<%= @post.title %>
+<%= @post.content %>
+<% @post.comments.each do |comment| %>
+<%= "#{comment.user.username} says: #{comment.content}" %>
+<% end %>
+<% @post.categories.each do |category| %>
+<%= category.name %>
+<% end %>
+<% @post.users.uniq.each do |user| %>
+<%= link_to user.username,user %>
+<% end %>
 
+
+
+<%= form_for @comment do |f| %>
+  <%=f.label :content  %>
+  <%= f.text_field :content %>
+  <%= f.hidden_field :post_id, :value => @post.id %>
+  <%= f.collection_select :user_id, User.all, :id, :username %>
+  <%= f.fields_for :user, @post.users.build do |user_fields| %>
+    <%= user_fields.text_field :username %>
+    <% end %>
+
+  <%= f.submit %>
+
+<% end %>
